// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders a style with CSS variable fontFamily: Makeswift styles 1`] = `
[
  ".ms-1cifws9{max-width:100%;}@media only screen and (min-width: 769px){.ms-1cifws9{width:80%;margin-top:4px;margin-right:auto;margin-bottom:0px;margin-left:auto;}}@media only screen and (min-width: 576px) and (max-width: 768px){.ms-1cifws9{width:80%;margin-top:4px;margin-right:auto;margin-bottom:0px;margin-left:auto;}}@media only screen and (max-width: 575px){.ms-1cifws9{width:80%;margin-top:4px;margin-right:auto;margin-bottom:0px;margin-left:auto;}}",
]
`;

exports[`renders a style with CSS variable fontFamily: resolvedValue 1`] = `"ms-1cifws9"`;

exports[`renders a style with CSS variable fontFamily: snapshot 1`] = `
{
  "cacheData": {
    "apiResources": {},
    "localizedResourcesMap": {},
  },
  "document": {
    "data": {
      "key": "00000000-0000-0000-0000-000000000000",
      "props": {
        "children": {
          "columns": [
            {
              "deviceId": "desktop",
              "value": {
                "count": 12,
                "spans": [
                  [
                    12,
                  ],
                ],
              },
            },
          ],
          "elements": [
            {
              "key": "11111111-1111-1111-1111-111111111111",
              "props": {
                "propKey": {
                  "textStyle": [
                    {
                      "deviceId": "desktop",
                      "value": {
                        "fontFamily": "var(--font-heading)",
                        "fontSize": null,
                        "fontStyle": [],
                        "fontWeight": null,
                        "letterSpacing": null,
                        "textTransform": [],
                      },
                    },
                  ],
                  "width": [
                    {
                      "deviceId": "desktop",
                      "value": {
                        "unit": "%",
                        "value": 100,
                      },
                    },
                  ],
                },
              },
              "type": "TestComponent",
            },
          ],
        },
      },
      "type": "./components/Root/index.js",
    },
    "fonts": [],
    "id": "test-page-id",
    "locale": null,
    "localizedPages": [],
    "meta": {},
    "seo": {},
    "site": {
      "id": "test-site-id",
    },
    "snippets": [],
  },
}
`;

exports[`renders a style with fontFamily: Makeswift styles 1`] = `
[
  ".ms-1cifws9{max-width:100%;}@media only screen and (min-width: 769px){.ms-1cifws9{width:80%;margin-top:4px;margin-right:auto;margin-bottom:0px;margin-left:auto;}}@media only screen and (min-width: 576px) and (max-width: 768px){.ms-1cifws9{width:80%;margin-top:4px;margin-right:auto;margin-bottom:0px;margin-left:auto;}}@media only screen and (max-width: 575px){.ms-1cifws9{width:80%;margin-top:4px;margin-right:auto;margin-bottom:0px;margin-left:auto;}}",
]
`;

exports[`renders a style with fontFamily: resolvedValue 1`] = `"ms-1cifws9"`;

exports[`renders a style with fontFamily: snapshot 1`] = `
{
  "cacheData": {
    "apiResources": {},
    "localizedResourcesMap": {},
  },
  "document": {
    "data": {
      "key": "00000000-0000-0000-0000-000000000000",
      "props": {
        "children": {
          "columns": [
            {
              "deviceId": "desktop",
              "value": {
                "count": 12,
                "spans": [
                  [
                    12,
                  ],
                ],
              },
            },
          ],
          "elements": [
            {
              "key": "11111111-1111-1111-1111-111111111111",
              "props": {
                "propKey": {
                  "textStyle": [
                    {
                      "deviceId": "desktop",
                      "value": {
                        "fontFamily": "Arial",
                        "fontSize": null,
                        "fontStyle": [],
                        "fontWeight": null,
                        "letterSpacing": null,
                        "textTransform": [],
                      },
                    },
                  ],
                  "width": [
                    {
                      "deviceId": "desktop",
                      "value": {
                        "unit": "%",
                        "value": 100,
                      },
                    },
                  ],
                },
              },
              "type": "TestComponent",
            },
          ],
        },
      },
      "type": "./components/Root/index.js",
    },
    "fonts": [],
    "id": "test-page-id",
    "locale": null,
    "localizedPages": [],
    "meta": {},
    "seo": {},
    "site": {
      "id": "test-site-id",
    },
    "snippets": [],
  },
}
`;

exports[`renders a style: Makeswift styles 1`] = `
[
  ".ms-1cifws9{max-width:100%;}@media only screen and (min-width: 769px){.ms-1cifws9{width:80%;margin-top:4px;margin-right:auto;margin-bottom:0px;margin-left:auto;}}@media only screen and (min-width: 576px) and (max-width: 768px){.ms-1cifws9{width:80%;margin-top:4px;margin-right:auto;margin-bottom:0px;margin-left:auto;}}@media only screen and (max-width: 575px){.ms-1cifws9{width:80%;margin-top:4px;margin-right:auto;margin-bottom:0px;margin-left:auto;}}",
]
`;

exports[`renders a style: resolvedValue 1`] = `"ms-1cifws9"`;

exports[`renders a style: snapshot 1`] = `
{
  "cacheData": {
    "apiResources": {},
    "localizedResourcesMap": {},
  },
  "document": {
    "data": {
      "key": "00000000-0000-0000-0000-000000000000",
      "props": {
        "children": {
          "columns": [
            {
              "deviceId": "desktop",
              "value": {
                "count": 12,
                "spans": [
                  [
                    12,
                  ],
                ],
              },
            },
          ],
          "elements": [
            {
              "key": "11111111-1111-1111-1111-111111111111",
              "props": {
                "propKey": {
                  "margin": [
                    {
                      "deviceId": "desktop",
                      "value": {
                        "marginBottom": undefined,
                        "marginLeft": undefined,
                        "marginRight": undefined,
                        "marginTop": {
                          "unit": "px",
                          "value": 4,
                        },
                      },
                    },
                  ],
                  "width": [
                    {
                      "deviceId": "desktop",
                      "value": {
                        "unit": "%",
                        "value": 80,
                      },
                    },
                  ],
                },
              },
              "type": "TestComponent",
            },
          ],
        },
      },
      "type": "./components/Root/index.js",
    },
    "fonts": [],
    "id": "test-page-id",
    "locale": null,
    "localizedPages": [],
    "meta": {},
    "seo": {},
    "site": {
      "id": "test-site-id",
    },
    "snippets": [],
  },
}
`;
